# PicoHumidityTemperature

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_deploy_and_monitor.sh  deploy_and_monitor.sh  monitor.sh  pico_temperature_humidity.c
